# random-cli

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: test.yml
src/: main.rs
src/commands/: mod.rs  number.rs  roll.rs  select.rs  shuffle.rs  strings.rs  toss.rs
src/lib/: die.rs  mod.rs  numbers.rs  roll.rs  select.rs  shuffle.rs  strings.rs
src/lib/helpers/: mod.rs  read_stdin.rs
