[package]
name = "random"
author = "Shresht7"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "random"
path = "src/bin/main.rs"

[lib]
name = "random"
path = "src/lib/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
is-terminal = "0.4.10"
rand = "0.8.5"
uuid = { version = "1.6.1", features = ["v4"] }
