[package]
name = "random"
description = "A command-line interface for when you need some randomness"
author = "Shresht7"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "random"
path = "src/bin/main.rs"

[lib]
name = "random"
path = "src/lib/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
is-terminal = "0.4.15"
rand = "0.9.0"
uuid = { version = "1.12.1", features = ["v4"] }
